датасет возвращает фото

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "edbad27a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01myaml\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mDataset\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BootDataset\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      5\u001b[0m option_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mfr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:/Code/KD_Summer_Work/config.yml\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "File \u001b[1;32md:\\Code\\KD_Summer_Work\\Dataset.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Dataset\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mBootDataset\u001b[39;00m(Dataset):\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='D:/Code/KD_Summer_Work/config.yml' mode='r' encoding='cp1251'>\n"
      ]
     }
    ],
@@ -29,73 +24,37 @@
     "    print(file_option)\n",
     "    option=yaml.safe_load(file_option)\n",
     "\n",
-    "print(option)\n",
     "dataset=BootDataset(option['data_path'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "729b2e60",
+   "execution_count": 4,
+   "id": "917f8923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "option_path='config.yml'\n",
-    "with open(option_path,'r') as file_option:\n",
-    "    option=yaml.safe_load(file_option)"
+    "dataset[5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dacd3f99",
+   "id": "9493de7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  WARNING: The script isympy.exe is installed in 'C:\\Users\\artem\\AppData\\Roaming\\Python\\Python312\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
-      "  WARNING: The scripts torchfrtrace.exe and torchrun.exe are installed in 'C:\\Users\\artem\\AppData\\Roaming\\Python\\Python312\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting torch\n",
-      "  Using cached torch-2.7.1-cp312-cp312-win_amd64.whl.metadata (28 kB)\n",
-      "Requirement already satisfied: filelock in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (3.13.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (4.11.0)\n",
-      "Collecting sympy>=1.13.3 (from torch)\n",
-      "  Using cached sympy-1.14.0-py3-none-any.whl.metadata (12 kB)\n",
-      "Requirement already satisfied: networkx in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (3.3)\n",
-      "Requirement already satisfied: jinja2 in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (3.1.4)\n",
-      "Requirement already satisfied: fsspec in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (2024.6.1)\n",
-      "Requirement already satisfied: setuptools in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (75.1.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from jinja2->torch) (2.1.3)\n",
-      "Using cached torch-2.7.1-cp312-cp312-win_amd64.whl (216.1 MB)\n",
-      "Using cached sympy-1.14.0-py3-none-any.whl (6.3 MB)\n",
-      "Installing collected packages: sympy, torch\n",
-      "Successfully installed sympy-1.14.0 torch-2.7.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install torch"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
