поправил датасет, начинаем писать сетку

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "edbad27a",
    "metadata": {},
    "outputs": [
@@ -11,17 +11,6 @@
      "output_type": "stream",
      "text": [
       "<_io.TextIOWrapper name='D:/Code/KD_Summer_Work/config.yml' mode='r' encoding='cp1251'>\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Segmentation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m     \u001b[38;5;28mprint\u001b[39m(file_option)\n\u001b[32m      9\u001b[39m     option=yaml.safe_load(file_option)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m dataset=Boot_Segmentation_Dataset(\u001b[43moption\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mSegmentation\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mimg_path\u001b[39m\u001b[33m'\u001b[39m],option[\u001b[33m'\u001b[39m\u001b[33mSegmentation\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mlabel_path\u001b[39m\u001b[33m'\u001b[39m])\n",
-      "\u001b[31mKeyError\u001b[39m: 'Segmentation'"
      ]
     }
    ],
@@ -37,6 +26,29 @@
     "    option=yaml.safe_load(file_option)\n",
     "\n",
     "dataset=Boot_Segmentation_Dataset(option['Segmentation']['img_path'],option['Segmentation']['label_path'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e52485f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Subclasses of Dataset should implement __getitem__.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\artem\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\torch\\utils\\data\\dataset.py:59\u001b[39m, in \u001b[36mDataset.__getitem__\u001b[39m\u001b[34m(self, index)\u001b[39m\n\u001b[32m     58\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, index) -> _T_co:\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mSubclasses of Dataset should implement __getitem__.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNotImplementedError\u001b[39m: Subclasses of Dataset should implement __getitem__."
+     ]
+    }
+   ],
+   "source": [
+    "dataset[0]"
    ]
   },
   {
