--- a/Main_test.ipynb
+++ b/Main_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8f55411c",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\artem\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "C:\\Users\\artem\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -24,7 +24,7 @@
     "import torch\n",
     "import segmentation_models_pytorch as smp\n",
     "from torch.utils.data import DataLoader\n",
-    "option_path=fr'D:/Code/KD_Summer_Work/config.yml'\n",
+    "option_path=fr\"C:/Code/KD_PRACT/KD_Summer_Work/config.yml\"\n",
     "\n",
     "with open(option_path,'r') as file_option:\n",
     "    option=yaml.safe_load(file_option)\n",
@@ -44,12 +44,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "id": "3e6eed10",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BootDataset' object has no attribute 'all_items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mall_items\u001b[49m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'BootDataset' object has no attribute 'all_items'"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.all_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "61babd05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Code\\\\KD_PRACT\\\\KD_DATA\\\\Segm\\\\your_dataset.JPG'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m resilt=segm_model(\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mstart_img\u001b[39m\u001b[33m'\u001b[39m].view(-\u001b[32m1\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m256\u001b[39m,\u001b[32m256\u001b[39m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Code\\KD_PRACT\\KD_Summer_Work\\Transformation\\Dataset.py:42\u001b[39m, in \u001b[36mBootDataset.__getitem__\u001b[39m\u001b[34m(self, idx)\u001b[39m\n\u001b[32m     40\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idx):\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m     start_img=\u001b[38;5;28mself\u001b[39m.transformation(\u001b[43mPIL\u001b[49m\u001b[43m.\u001b[49m\u001b[43mImage\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mstart_items\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     43\u001b[39m     done_img=\u001b[38;5;28mself\u001b[39m.transformation(PIL.Image.open(\u001b[38;5;28mself\u001b[39m.done_items[idx]))\n\u001b[32m     45\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[32m     46\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mstart_img\u001b[39m\u001b[33m'\u001b[39m:start_img,\n\u001b[32m     47\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mdone_img\u001b[39m\u001b[33m'\u001b[39m:done_img,\n\u001b[32m     48\u001b[39m     }\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\PIL\\Image.py:3513\u001b[39m, in \u001b[36mopen\u001b[39m\u001b[34m(fp, mode, formats)\u001b[39m\n\u001b[32m   3511\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_path(fp):\n\u001b[32m   3512\u001b[39m     filename = os.fspath(fp)\n\u001b[32m-> \u001b[39m\u001b[32m3513\u001b[39m     fp = \u001b[43mbuiltins\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m   3514\u001b[39m     exclusive_fp = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m   3515\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'C:\\\\Code\\\\KD_PRACT\\\\KD_DATA\\\\Segm\\\\your_dataset.JPG'"
+     ]
+    }
+   ],
    "source": [
     "resilt=segm_model(dataset[0]['start_img'].view(-1,3,256,256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ffd464fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.cuda.is_available()"
    ]
   },
   {
@@ -106,8 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca9f40e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2d7d426",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -129,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
