--- a/Main_test.ipynb
+++ b/Main_test.ipynb
@@ -182,8 +182,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f2d7d426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Angle_finder.Models import Angle_CNN_2D\n",
+    "import cv2\n",
+    "\n",
+    "fedora=cv2.imread(r\"C:\\Code\\KD_PRACT\\KD_Summer_Work\\Angle_finder\\test_fedora.png\",cv2.IMREAD_UNCHANGED)#сохраняет в исходном виде\n",
+    "\n",
+    "cv2.imshow('dst',fedora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05bd49b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "cv2.imshow('dst',fedora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2dd3d6",
    "metadata": {},
    "outputs": [],
    "source": []
